<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:layout_marginBottom="5dp"
    tools:context=".MainActivity"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            card_view:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/eunha"
                android:scaleType="centerCrop"
                android:src="@drawable/eunha" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/relativeText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cardImage"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/eunha_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/eunhaName"
                android:theme="@style/textPrincipal"/>

            <TextView
                android:id="@+id/eunha_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eunha_name"
                android:layout_marginTop="10dp"
                android:text="@string/eunhaFrom"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/eunha_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eunha_from"
                android:layout_marginTop="40dp"
                android:accessibilityLiveRegion="polite"
                android:clickable="false"
                android:lineSpacingExtra="8sp"
                android:maxWidth="200dp"
                android:minHeight="48dp"
                android:text="@string/eunhaBio"
                android:textSize="15sp"
                android:typeface="normal" />


        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/relativeText"
            android:layout_alignEnd="@+id/relativeText"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/add"
            card_view:backgroundTint="#E91E63" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            >
            <TextView
                android:id="@+id/postText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textSize="14sp"
                android:text="@string/eunhaPost"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eunaPots"
                android:layout_below="@+id/postText"
                android:layout_marginTop="10dp"
                android:theme="@style/textPrincipal"/>

            <TextView
                android:id="@+id/eunha_folloer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eunhaFollower"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/eunha_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eunhaFollowes"
                android:layout_below="@+id/eunha_folloer"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:theme="@style/textPrincipal"/>

            <TextView
                android:id="@+id/eunha_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eunhaFollowing"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:id="@+id/eunha_followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eunha_follow"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:text="@string/eunhaFollowings"
                android:theme="@style/textPrincipal"
                />

        </RelativeLayout>



    </RelativeLayout>







</androidx.cardview.widget.CardView>